--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+title: Morgane Ohlig
+logo: /assets/img/me.png
+description: MEng Computer Science @ University College London. Systems and Networks Research Group.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
+github.repository_url: https://github.com/Foalfloater66
